# sim_evo_social_norms

./: .gitignore  CMakeLists.txt  EvolPrivRepGame.hpp  GroupedEvo.hpp  Norm.hpp  Parameters.hpp  PrivRepGame.hpp  README.md  Vector2d.hpp  extract_2nd_order_msgpack.cpp  fugaku_build.sh  fugaku_build_calc_fixation_probs.sh  inspect_EvolPrivRepGame.cpp  inspect_GroupedEvo.cpp  inspect_Norm.cpp  inspect_PrivRepGame.cpp  inspect_PrivRepGameTimeSeries.cpp  inspect_PublicRepGame.cpp  main_calc_fixation_probs.cpp  main_evo_simulation.cpp  main_exhaustive_evol_stab.cpp  main_fix_probs_param_dep.cpp  main_grouped_evo.cpp  main_grouped_evo_MC.cpp  main_grouped_evo_ODE.cpp  main_grouped_evolution.cpp  main_homogeneous_evo.cpp  main_optimize_norm.cpp  main_priv_finite_mu.cpp  main_priv_sim.cpp  main_well_mixed_evo.cpp  msgpack2json.cpp  test_EvolPrivRepGame.cpp  test_GroupedEvo.cpp  test_Norm.cpp  test_PrivRepGame.cpp  test_PublicRepGame.cpp
fugaku_job/: .gitignore  fugaku_job.sh  params.json
script/: .gitignore  Pipfile  payoff_comparison.py  pfix_b_dep.py  three_species.py
script/alld_invadable/: plot_invadable.py
script/evo_grouped_MC/: _input.json  get_args.py  run.sh
script/evo_grouped_MC/plot/: plot_pc_M_timeseries.py
script/evo_grouped_ODE/: .gitignore  _input.json  get_args.py  plot_cooperation_levels.py  plot_histo.py  plot_timeseries.py  run.sh
script/evo_grouped_ODE/plot_short_timeseries/: .gitignore  2nd_norms.txt  3rd_norms.txt  plot_short_timeseries.py  run_simulation.sh  run_simulation_2nd.sh  run_simulation_3rd.sh
script/evo_three_species/: .gitignore  three_species.py  three_species_frac_pc.py
script/evo_well_mixed/: .gitignore  evo_well_mixed.py  three_species.py  three_species_frac_pc.py  well_mixed_fractions.py
script/image_visualization/: L1L2_image.txt  L1L2_image_visualize.py  L1_L3_vs_AllD.py  image_visualize.py
script/invadability/: plot_invadable.py
script/payoff_comparison/: payoff_comparison.py
script/table_pfix/: table_pfix.py
script/three_species/: .gitignore  three_species.py
script/transition_graph_vis/: .gitignore  trans_graph_vis.py
script_grouped/: .gitignore  Pipfile  _input.json  get_args.py  plot_histo_norms.py  plot_timeseries.py  run.sh
script_grouped/fix_prob_results/: .gitignore  make_path_to_param.py  readme
